# pseudo-airspeed

./: .gitignore  LICENSE  README.md  setup.cfg
data/: flight_pawel_wing_2017.09.csv
examples/: example.py
src/pseudoairspeed/: analysis.py
