[metadata]
name = pseudoairspeed
version = 0.1
license = MIT
description = Some analysis of flight data and airspeed inference
long_description = file: README.rst
author = Comster
author_email = comsterfpv@gmail.com
classifiers=
   INAV

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   pandas

[options.packages.find]
where=src